--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,14 @@
   "name": "html",
   "description": "inside the world",
   "version": "1.0",
-  "background": {
-    "scripts": ["background.js"]
-  },
+  // "background": {
+  //   "scripts": ["background.js"]
+  // },
   "content_scripts": [
     {
       "js": ["contentscript.js"],
-      "matches": ["https://www.google.com/*", "http://www.google.com/*"]
+      // "matches": ["https://www.google.com/*", "http://www.google.com/*"]
+      "matches": [ "http://*/*", "https://*/*"]
       // "run_at": "document_end"
     }
   ],
